# classic-basic

./: .gitignore  LICENSE  README.md  TODO.md  details.md  pyproject.toml  test.sh
demo/: fm11basic.bas  grantsbasic.bas  infinite.bas  msxbasic.bas  qbasic.bas  sample.bas
run/: 6502.sh  basic80.sh  fm11basic.sh  fm7basic.sh  grantsbasic.sh  gwbasic.sh  msxbasic.sh  n88basic.sh  nbasic.sh  qbasic.sh
scripts/: 6502-basic-common.sh  basic-file-common.sh  bootstrap_fm11basic_assets.sh  exitemu.com  fm11basic-common.sh  fm7basic-common.sh  get_n80_rom.sh  gwbasic-common.sh  qbasic-common.sh  runcpm-common.sh
setup/: 6502.sh  all.sh  basic80.sh  fm11basic.sh  fm7basic.sh  grantsbasic.sh  gwbasic.sh  msxbasic.sh  n88basic.sh  nbasic.sh  qbasic.sh
src/: basic80_interactive.py  basic_batch_exit.py  dataclass_compat.py  dos_batch_filter.py  dos_batch_stream_diff.py  dos_text_shell.py  dosemu_named_sem_shim.c  fbasic_batch.py  fm11basic.py  fm7basic_cli.py  gwbasic_interactive.py  gwbasic_program_check.py  mandelbrot_output.py  n88basic_cli.py  n88basic_program_check.py  qbasic_interactive.py  qbasic_program_check.py  qbasic_tty_bridge.py  run_control_bridge.py  runcpm_batch_exit.py
tests/: __init__.py  test_6502_runner.py  test_basic80_runner.py  test_basic_batch_exit.py  test_boot_settles.py  test_cpm.py  test_dos_batch_filter.py  test_dos_batch_stream_diff.py  test_dos_runner_wrappers.py  test_dosemu_named_sem_shim.py  test_execution.py  test_fbasic_batch.py  test_fbasic_runner.py  test_fidelity_audit.py  test_fm11basic.py  test_fm7basic_cli.py  test_grantsbasic.py  (+21 more)
(+75 files in other folders)
