[project]
name = "z80-basic"
version = "0.1.0"
description = "Skeleton for running CP/M + MBASIC in a normal terminal"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
